Fix scrollbar visibility, slider fixes

--- a/src/components/posts/feed/Feed.module.scss
+++ b/src/components/posts/feed/Feed.module.scss
@@ -5,7 +5,6 @@
     align-content: center;
     min-width: 300px;
     max-width: 560px;
-    padding: 0 1rem;
 
     .text {
         text-align: center;
