--- a/src/components/stories/Stories.module.scss
+++ b/src/components/stories/Stories.module.scss
@@ -1,15 +1,15 @@
 @import "../../css/mixins";
 
-.slider {
+.stories {
     position: relative;
 
     @include desktop {
         margin: 0 -4rem 2rem -4rem;
     }
 
-    @include mobile {
-        max-width: 100vw; // fixes overflow
-        margin-bottom: 2rem;
+    @include mobileAndTablet {
+        max-width: 90vw; // fixes overflow
+        margin: 0 auto 2rem auto;
     }
 
     .scroll {
