--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -41,7 +41,6 @@ html {
 
 html, body {
     height: 100%;
-    overflow-x: hidden;
 }
 
 #app {
